Bug 461110 - Extra parens in decompilation of "a += b = 3". r=brendan.